Mapped out js flow

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <body>
    <header id = "header">
       <!--Image varies depending on current season
-      <img src="img/winter.jpg" alt="" class="header-img">
+      <img src="img/winter.jpg" alt="" id="header-img">
       -->
    </header>
    <main id="container">
