Changed dynamic image from html element to css

--- a/index.html
+++ b/index.html
@@ -6,12 +6,17 @@
    <title>Temperature Convertor</title>
    <link rel="stylesheet" href="styles.css">
 </head>
-<body>
+<body id = "body">
+
+<!--I
    <header id = "header">
       <!--Image varies depending on current season
       <img src="img/winter.jpg" alt="" id="header-img">
-      -->
+      
    </header>
+-->
+
+
    <main id="container">
       <h1 id="headline">Temperature Converter</h1>
       <section id="input-section">
