Added dynamic background colors

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 -->
 
 
-   <main id="container">
+   <main id="main">
       <h1 id="headline">Temperature Converter</h1>
       <section id="input-section">
          <input type="text" id="input-temp" placeholder="Enter temperature">
@@ -36,7 +36,7 @@
             <p class="result-text" id="farenheit-result">98.6 degrees Farenheit</p>
          </div>
          <div class="result-div">
-            <p class="result-text" id="celsius-result">37 degrees Celsisus</p>
+            <p class="result-text" id="celsius-result">37 degrees Celsius</p>
          </div>
          <div class="result-div">
             <p class="result" id="kelvin-result">310.2 degrees Kelvin</p>
