--- a/index.html
+++ b/index.html
@@ -4,6 +4,10 @@
    <meta charset="UTF-8">
    <meta name="viewport" content="width=device-width, initial-scale=1.0">
    <title>Temperature Convertor</title>
+
+   <!--Google Fonts-->
+   <link href="https://fonts.googleapis.com/css2?family=Spartan:wght@400;700&display=swap" rel="stylesheet">
+
    <link rel="stylesheet" href="styles.css">
 </head>
 <body id = "body">
@@ -50,7 +54,7 @@
       </div>
 
       <footer id="footer">
-         <p id="copyright">&copy;  2020 Casey Pitman</p>
+         <h4 id="copyright">&copy;  2020 Casey Pitman</h4>
       </footer>
 
 
