added media queries for tablet and desktop.

--- a/index.html
+++ b/index.html
@@ -39,6 +39,8 @@
             </div>
          </section>
 
+<!-- Dynamically generated results -->
+
          <section id="results">
             <div class="result-div">
                <p class="result-text" id="farenheit-result">98.6 degrees Farenheit</p>
@@ -49,15 +51,11 @@
             <div class="result-div">
                <p class="result-text" id="kelvin-result">310.2 degrees Kelvin</p>
             </div>
-         </section>
+         </section>   
+      
 
+         <p id="copyright">&copy;  2020 Casey Pitman</p>
       </div>
-
-      <footer id="footer">
-         <h4 id="copyright">&copy;  2020 Casey Pitman</h4>
-      </footer>
-
-
    </main>
 
 </body>
