Added format checks for inputs

--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
                </select>
             </div>
             <div id="button-div">
-               <button id="convert">Convert</button>
+               <button id="convert-btn">Convert</button>
             </div>
          </section>
 
