Implemented temperature conversion functionality

--- a/index.html
+++ b/index.html
@@ -42,13 +42,13 @@
 
             <section id="results">
                <div class="result-div">
-                  <p class="result-text" id="farenheit-result">98.6 degrees Farenheit</p>
+                  <p class="result-text" id="farenheit-result">&nbsp;</p>
                </div>
                <div class="result-div">
-                  <p class="result-text" id="celsius-result">37 degrees Celsius</p>
+                  <p class="result-text" id="celsius-result">&nbsp;</p>
                </div>
                <div class="result-div">
-                  <p class="result-text" id="kelvin-result">310.2 degrees Kelvin</p>
+                  <p class="result-text" id="kelvin-result">&nbsp;</p>
                </div>
                <button class = "button" id="clear-btn">Clear</button>
             </section>   
