Implemented display results functionality.

--- a/index.html
+++ b/index.html
@@ -11,23 +11,13 @@
    <link rel="stylesheet" href="styles.css">
 </head>
 <body id = "body">
-
-<!--I
-   <header id = "header">
-      <!--Image varies depending on current season
-      <img src="img/winter.jpg" alt="" id="header-img">
-      
-   </header>
--->
-
-
    <main id="main">
       <div id="wrapper">
          <div id="content">
             <h1 id="headline">Temperature Converter</h1>
             <section id="input-section">
                <div id = "input-div">
-                  <input type="number" id="input-temp" placeholder="Enter Temperature" value = "">
+                  <input type="number" id="input-temp" placeholder = "Enter Temperature" value = "">
                   <select name="input-temp-scale" id="input-temp-scale">
                      <option value="selected">Temperature Scale</option>
                      <option value="farenheit">Farenheit</option>
@@ -38,7 +28,7 @@
                <button class = "button" id="convert-btn">Convert</button>
             </section>
 
-               <!-- Dynamically generated results -->
+            <!-- Dynamically generated results -->
 
             <section id="results">
                <div class="result-div">
@@ -50,15 +40,14 @@
                <div class="result-div">
                   <p class="result-text" id="kelvin-result">&nbsp;</p>
                </div>
-               <button class = "button" id="clear-btn">Clear</button>
+               <button class = "button" id="clear-btn">Make another conversion</button>
             </section>   
          </div>
-
          <p id="copyright">&copy;  2020 Casey Pitman</p>
       </div>
    </main>
-
 </body>
+
 <script src="app.js"></script>
 
 </html>
